k8s/base/namespace.yaml
# CascadeSec webhook test -- this PR is not meant to be merged.
apiVersion: v1
kind: Namespace
metadata:
  name: pugetscope
# CascadeSec webhook test 3 -- will be closed, not merged.
